--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ PyQt5 = "^5.15.4"
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.5.6"
 flake8 = "^3.9.0"
+rope = "^0.19.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
