--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ PyQt5 = "^5.15.4"
 autopep8 = "^1.5.6"
 flake8 = "^3.9.0"
 rope = "^0.19.0"
+pytest = "^6.2.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
